@@ -25,7 +25,7 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # Lesser General Public License for more details.
 
-# Defines the Sun JDK environment for Win32
+# Defines the Sun JDK environment for Solaris
 
 # JDK_DIR is specified indirectly.  We determine the vendor, release and
 # platform (see CommonDefs.mk), then look for a variable that defines
@@ -33,16 +33,15 @@
 
 JDK_BIN_DIR := $(JDK_DIR)/bin
 
-JAVAC := $(JDK_BIN_DIR)/javac.exe
-JAVA := $(JDK_BIN_DIR)/java.exe
-JAR := $(JDK_BIN_DIR)/jar.exe
-JAVADOC := $(JDK_BIN_DIR)/javadoc.exe
-RMIC := $(JDK_BIN_DIR)/rmic.exe
-JDB := $(JDK_BIN_DIR)/jdb.exe
+JAVAC := $(JDK_BIN_DIR)/javac
+JAVA := $(JDK_BIN_DIR)/java
+JAR := $(JDK_BIN_DIR)/jar
+JAVADOC := $(JDK_BIN_DIR)/javadoc
+RMIC := $(JDK_BIN_DIR)/rmic
+JDB := $(JDK_BIN_DIR)/jdb
 
-# NT uses a semi-colon to seperate items in the classpath (Unix
-# uses a colon).
+# Solaris uses a colon to seperate items in the classpath
 
-CLASSPATHSEP := $(SEMI)
+CLASSPATHSEP := $(COLON)
 
 
