@@ -4,4 +4,6 @@ SiteConfig.mk identifes your current platform.
 
 LocalConfig.mk identifies the locations of tools, JDKs and other resources.
 
+Two examples files are included that generally work for Cygnus under NT.
+
 Please consult the JBE manual for more information.
