@@ -1,3 +1,8 @@
+* Jan 30 2001 hship
+
+Add Solaris support.  Add sample LocalConfig.mk and SiteConfig.mk.
+Rename JDK.Sun_Win32.mk to JDK.Sun_Cygwin.mk.
+
 * Jan 10 2001 hship
 
 Update copyrights.
